Use Bulma layout

--- a/src/RoughCut.Web/wwwroot/bulma.html
+++ b/src/RoughCut.Web/wwwroot/bulma.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
 <body>
-    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
             Rough Cut
@@ -41,7 +41,7 @@
             </div>
           </div>
     </nav>
-    <section class="hero">
+    <section class="hero is-primary">
         <div class="hero-body">
             <div class="content has-text-centered">
                 <p>Latest article picture</p>
